tests/fixtures/invalid/float_pow_bytes.py
# Cannot raise Float to Bytes power
x: float = 1.0 ** b"hello"
